[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://MiscRelated/CommonTextures/CommonTextures_AboutButton_MissingBottom.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel_TopBottomBorder.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel_HeaderBackground.png" type="Texture" id=5]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="BaseTowerSpecificInfoPanel" type="MarginContainer"]
margin_right = 110.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 110.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_vertical = 2
custom_constants/separation = 0

[node name="HeaderMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 13.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderMarginer"]
margin_right = 50.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="HeaderBackground" type="TextureRect" parent="VBoxContainer/HeaderMarginer/MarginContainer"]
margin_right = 50.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderMarginer/MarginContainer"]
margin_left = 5.0
margin_right = 45.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderMarginer/MarginContainer/MarginContainer"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Nan header"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HeaderMarginer"]
margin_left = 96.0
margin_right = 110.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 10

[node name="AdvancedButton" parent="VBoxContainer/HeaderMarginer/MarginContainer2" instance=ExtResource( 2 )]
margin_right = 14.0
margin_bottom = 13.0
texture_normal = ExtResource( 3 )

[node name="TopBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 110.0
margin_bottom = 14.0
texture = ExtResource( 4 )

[node name="BodyMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 110.0
margin_bottom = 14.0

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 110.0
margin_bottom = 15.0
texture = ExtResource( 4 )
[connection signal="pressed_mouse_event" from="VBoxContainer/HeaderMarginer/MarginContainer2/AdvancedButton" to="." method="_on_AdvancedButton_pressed_mouse_event"]
